// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Paragraph - 2 newlines as 2 Paragraphs 1`] = `
{
  "blocks": [
    {
      "content": [
        {
          "content": "Two",
          "type": "PlainText",
        },
      ],
      "type": "Paragraph",
    },
    {
      "content": [
        {
          "content": "paragraphs.",
          "type": "PlainText",
        },
      ],
      "type": "Paragraph",
    },
  ],
  "type": "Document",
}
`;

exports[`Paragraph - simple 1`] = `
{
  "blocks": [
    {
      "content": [
        {
          "content": "A simple paragraph.",
          "type": "PlainText",
        },
      ],
      "type": "Paragraph",
    },
  ],
  "type": "Document",
}
`;

exports[`Paragraph - with InlineElements 1`] = `
{
  "blocks": [
    {
      "content": [
        {
          "content": "This is ",
          "type": "PlainText",
        },
        {
          "content": [
            {
              "content": "foo",
              "type": "PlainText",
            },
          ],
          "type": "ConstrainedBold",
        },
        {
          "content": "bar",
          "type": "PlainText",
        },
      ],
      "type": "Paragraph",
    },
  ],
  "type": "Document",
}
`;

exports[`Paragraph - with newlines 1`] = `
{
  "blocks": [
    {
      "content": [
        {
          "content": "Still",
          "type": "PlainText",
        },
        {
          "content": "one",
          "type": "PlainText",
        },
        {
          "content": "paragraph.",
          "type": "PlainText",
        },
      ],
      "type": "Paragraph",
    },
  ],
  "type": "Document",
}
`;
